# pixi-bug-repro

./: .gitignore  README.md  pyproject.toml
my_subdir/: pyproject.toml
my_subdir/my_subdir.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pixi_repro.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
